Fix Meson and add logs / UART debugs

--- a/src/ftxui-toolbox/meson.build
+++ b/src/ftxui-toolbox/meson.build
@@ -1,18 +1,17 @@
-project('ftxui-toolbox', 'c', 'cpp')
-
 src = files(
     'ftxui_simulated_avr.cpp',
+    'logs_renderer.cpp',
     'scroller.cpp',
 )
 
-inc = include_directories('.')
+inc = include_directories('..')
 
 ftxui_toolbox_lib = shared_library(
     'ftxui-toolbox',
     src,
     native: true,
     include_directories: inc,
-    dependencies: [ftxui_dep, simavr_drp],
+    dependencies: [ftxui_dep, simavr_drp, simavr_toolbox_dep],
 )
 
 ftxui_toolbox_dep = declare_dependency(
