Fix bugs in 47L04

--- a/src/simavr-toolbox/meson.build
+++ b/src/simavr-toolbox/meson.build
@@ -21,6 +21,10 @@ simavr_toolbox_lib = shared_library(
     include_directories: inc,
     dependencies: [simavr_drp],
     cpp_args: ['-std=c++20'],
+    override_options: [
+        'buildtype=debug',
+        'optimization=0',
+    ],
     native: true,
 )
 
