Move in real GU7000 simulated part from thermostat project

--- a/src/simavr-toolbox/meson.build
+++ b/src/simavr-toolbox/meson.build
@@ -5,8 +5,10 @@ src = files(
     'sim_base.cpp',
     'sim_bouncy_switch.cpp',
     'sim_gu7000.cpp',
+    'sim_gu7000_i2c.cpp',
     'sim_i2c_base.cpp',
     'sim_i2c_listener.cpp',
+    'sim_i2c_smarter_base.cpp',
     'sim_tca8418.cpp',
     'sim_tlc59116.cpp',
     'sim_tlp9202.cpp',
